After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 589988 - Compilation error on Solaris 9 (missing stdint.h)
Compilation error on Solaris 9 (missing stdint.h)
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.21.x
Other Solaris
: Normal critical
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2009-07-28 10:06 UTC by Artur Frysiak
Modified: 2009-07-30 13:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Conditionalize portability #includes in g-asyncns.h (887 bytes, patch)
2009-07-30 02:36 UTC, Dan Winship
none Details | Review

Description Artur Frysiak 2009-07-28 10:06:48 UTC
Steps to reproduce:
1. install OpenPKG on Solaris 9
2. try to build glib 2.21.4



Stack trace:
Making all in libasyncns
make[4]: Entering directory `/openpkg/RPM/TMP/glib-2.21.4/gio/libasyncns'
/bin/bash ../../libtool  --tag=CC   --mode=compile /openpkg/bin/cc -DHAVE_CONFIG_H -I. -I../.. -I../..  -I/openpkg/include -DG_DISABLE_SINGLE_INCLUDES -D_REENTRANT -D_PTHREADS  -O2 -pipe -Wall -MT asyncns.lo -MD -MP -MF .deps/asyncns.Tpo -c -o asyncns.lo asyncns.c
libtool: compile:  /openpkg/bin/cc -DHAVE_CONFIG_H -I. -I../.. -I../.. -I/openpkg/include -DG_DISABLE_SINGLE_INCLUDES -D_REENTRANT -D_PTHREADS -O2 -pipe -Wall -MT asyncns.lo -MD -MP -MF .deps/asyncns.Tpo -c asyncns.c -o asyncns.o
In file included from asyncns.c:22:
g-asyncns.h:32:20: error: stdint.h: No such file or directory
make[4]: *** [asyncns.lo] Error 1
make[4]: Leaving directory `/openpkg/RPM/TMP/glib-2.21.4/gio/libasyncns'
make[3]: *** [all-recursive] Error 1


Other information:
On Solaris 9 stdint.h is not available. You can use inttypes.h or port libasyncns to glib's int types (glibconfig.h).
Comment 1 Dan Winship 2009-07-30 02:36:49 UTC
Created attachment 139520 [details] [review]
Conditionalize portability #includes in g-asyncns.h

Does this fix it? (The stdint.h include is only needed because on some
versions of OS X it wasn't being included by the other header files that
depended on it. In theory, we shouldn't need an explicit inttypes.h
include on solaris.)
Comment 2 Artur Frysiak 2009-07-30 13:22:44 UTC
Yes. This patch fix it. Thank you.
Comment 3 Dan Winship 2009-07-30 13:38:16 UTC
fixed in git