Conditionalize portability #includes in g-asyncns.h

http://bugzilla.gnome.org/show_bug.cgi?id=589988